--- a/index.html
+++ b/index.html
@@ -26,16 +26,16 @@
     content="Get an instant AI marketing audit and strategy. Turn your website into a growth engine with personalized insights in seconds." />
   <meta name="twitter:image" content="https://brainito.com/favicon.ico" />
 
-  <!-- Hotjar Tracking Code for www.brainito.com -->
+  <!-- Hotjar Tracking Code for ai.brainito.com -->
   <script>
-    (function (h, o, t, j, a, r) {
-      h.hj = h.hj || function () { (h.hj.q = h.hj.q || []).push(arguments) };
-      h._hjSettings = { hjid: 2342082, hjsv: 6 };
-      a = o.getElementsByTagName('head')[0];
-      r = o.createElement('script'); r.async = 1;
-      r.src = t + h._hjSettings.hjid + j + h._hjSettings.hjsv;
-      a.appendChild(r);
-    })(window, document, 'https://static.hotjar.com/c/hotjar-', '.js?sv=');
+      (function(h,o,t,j,a,r){
+          h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
+          h._hjSettings={hjid:6646209,hjsv:6};
+          a=o.getElementsByTagName('head')[0];
+          r=o.createElement('script');r.async=1;
+          r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
+          a.appendChild(r);
+      })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
   </script>
 
   <!-- Google tag (gtag.js) -->
